proj2/test/test_11712009_9.spl
struct a {
    int b;
};
int main () {
    return a.c;
}